fix mobile css term size wrap marquee

--- a/static/desktop.css
+++ b/static/desktop.css
@@ -67,16 +67,13 @@ button {
 }
 
 #termcont {
-    width: auto;
-    height: auto;
-    min-width: 300px;
-    min-height: 300px;
     padding: 15px;
     font-size: 30px;
 }
 
 #term,
 #sumtime {
+    width: 560px;
     margin: 15px;
 }
 
