--- a/static/index.css
+++ b/static/index.css
@@ -105,11 +105,10 @@ button:active {
 }
 
 #term {
+    word-break: break-word;
+    overflow-wrap: break-word;
     margin: 0;
     padding: 0;
-    width: 560px;
-    overflow: clip;
-    overflow-wrap: break-word;
     text-overflow: clip;
 }
 
